Routes Changelog
========================

-- 1.8.1 (**tip**)
* Added option to use X_FORWARDED_PROTO for proxying behind https to work
  easier.
* Fixed map.resource to be less restrictive on id than just spaces.

-- 1.8 (March 28, 2008)
* Fixed bug of map.resource not allowing spaces in id.
* Fixed url generation to properly handle unicode defaults in addition to
  unicode arguments.
* Fixed url_for to handle lists as keyword args when generating query
  parameters.
* WARNING: Changed map.resource to not use ';', for actions, but the
  normal '/'. This means that formatted URL's will also now have the format
  come AFTER the action. Ie: /messsages/4.xml;rss -> /messages/4/rss.xml
* Fixed triple escaping bug, since WSGI servers are responsible for basic
  unescaping.

-- 1.7.2 (Feb. 27th, 2008)
* Fixed bug with keyword args not being coerced to raw string properly.

-- 1.7.1 (Nov. 16th, 2007)
* Fixed bug with sub-domains from route defaults getting encoded to unicode
  resulting in a unicode route which then caused url_for to throw an
  exception.
* Removed duplicate assignment in map.resource. Patch by Mike Naberezny.
* Applied test patch fix for path checking. Thanks Mike Naberezny.
* Added additional checking of remaining URL, to properly swallow periods in
  the appropriate context. Fixes #57.
* Added mapper.hardcode_names option which restricts url generation to the 
  named route during generation rather than using the routes default options
  during generation.
* Fixed the special '_method' attribute not being recognized during POST
  requests of Content-Type 'multipart/form-data'.

-- 1.7 (June 8th, 2007)
* Fixed url_unquoting to only apply for strings.
* Added _encoding option to individual routes to toggle decoding/encoding on a
  per route basis.
* Fixed route matching so that '.' and other special chars are only part of the
  match should they not be followed by that character. Fixed regexp creation so